--- a/activity.html
+++ b/activity.html
@@ -6,6 +6,14 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>add_activity</h1>
+    <h1>Entry Level</h1>
+    <h1>Hello World</h1>
+    <ul>
+        <li>1</li>
+        <li>2</li>
+        <li>3</li>
+        <li>4</li>
+        <li>5</li>
+    </ul>
 </body>
 </html>
