--- a/register.html
+++ b/register.html
@@ -7,5 +7,6 @@
 </head>
 <body>
     <h1>Hello World !!</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet a voluptatibus saepe corrupti porro nobis tempora, vel earum perferendis ad.</p>
 </body>
 </html>
