#1 - feat - add text on index.html

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <h2>ini adalah main untuk content</h2>
     </main>
     <footer>
-        <h3>ini untuk footer</h3>
+        <h3>ini untuk footer ya bro</h3>
     </footer>
 </body>
 </html>
